tests/fixtures/invalid/float_notin_bool.py
# Cannot use 'not in' with Float and Bool
x: bool = 1.0 not in True
